After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 723637 - GtkTreeViewColumn: fix critical warning
GtkTreeViewColumn: fix critical warning
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTreeView
unspecified
Other All
: Normal normal
: ---
Assigned To: gtktreeview-bugs
gtktreeview-bugs
Depends on:
Blocks:
 
 
Reported: 2014-02-04 22:33 UTC by Claudio Saavedra
Modified: 2014-02-06 17:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
GtkTreeViewColumn: fix critical warning (1.41 KB, patch)
2014-02-04 22:33 UTC, Claudio Saavedra
committed Details | Review

Description Claudio Saavedra 2014-02-04 22:33:28 UTC
Do not call _column_autosize() if there is no treeview set yet.
Comment 1 Claudio Saavedra 2014-02-04 22:33:30 UTC
Created attachment 268107 [details] [review]
GtkTreeViewColumn: fix critical warning
Comment 2 Matthias Clasen 2014-02-06 17:34:34 UTC
Review of attachment 268107 [details] [review]:

sure, makes sense
Comment 3 Claudio Saavedra 2014-02-06 17:42:17 UTC
Attachment 268107 [details] pushed as 7faf5ee - GtkTreeViewColumn: fix critical warning